[package]
name = "mithrust"
description = "A rust web framework inspired by mithriljs"
license = "MIT"
version = "0.0.1"
authors = [ "Jim Hessin <jhessin@gmail.com>" ]
edition = "2018"

[dependencies]
wasm-bindgen = "0.2.45"

  [dependencies.web-sys]
  version = "0.3.4"
  features = [ "Document", "Element", "HtmlElement", "Node", "Window" ]

[lib]
crate-type = [ "cdylib" ]
